php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #29821 convert_uudecode segfaults with interger
Submitted: 2004-08-24 17:19 UTC Modified: 2004-08-24 17:26 UTC
From: aidan@php.net Assigned:
Status: Closed Package: Strings related
PHP Version: 5.0.0 OS: Windows/Unix
Private report: No CVE-ID: None
 [2004-08-24 17:19 UTC] aidan@php.net
Description:
------------
convert_uudecode with an interger input causes a segfault.

Possible explanation for #28808

Reproduce code:
---------------
php -r 'convert_uudecode(1);'


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-08-24 17:26 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Sep 28 01:00:02 2026 UTC