MFH: Fixed bug #29821 (Fixed possible crashes in convert_uudecode() on invalid data).